fixtures/benchmark/negatives/n10.py
message = "claude-opus-4-1-20250805"
